# graphics-pipeline

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.md
include/graphics_pipeline/: color.h  framebuffer.h  gui.h  lighting.h  matrix_3x3.h  planar_pinhole_camera.h  projector.h  scene.h  shadow_map.h  texture.h  triangle_mesh.h  vector_3.h
src/: framebuffer.cpp  gui.cpp  lighting.cpp  lighting.h  matrix_3x3.cpp  planar_pinhole_camera.cpp  projector.cpp  scene.cpp  shadow_map.cpp  texture.cpp  triangle_mesh.cpp  vector_3.cpp
tests/: test_matrix_3x3.cpp  test_planar_pinhole_camera.cpp  test_triangle_mesh.cpp  test_vector_3.cpp
